--- a/APICORE/APICORE.csproj
+++ b/APICORE/APICORE.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="View\" />
+  </ItemGroup>
+
 
 </Project>
